Renamed templates to html

--- a/html/active-ability-sheet.html
+++ b/html/active-ability-sheet.html
@@ -25,8 +25,8 @@
             </div>
             <div class="template">
                 <header class="header">
-                    <span class="label">Attribute</span>
-                    <span class="formula">Formula</span>
+                    <span>Attribute</span>
+                    <span>Formula</span>
                     <a class="add-button" data-action="create"><i class="fas fa-plus"></i></a>
                 </header>
                 <div class="list">
