--- a/html/misc-sheet.html
+++ b/html/misc-sheet.html
@@ -2,7 +2,10 @@
     {{!-- Sheet Header --}}
     <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-        <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name" /></h1>
+        <div>
+            <label>{{item.type}}</label>
+            <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name" /></h1>
+        </div>
     </header>
 
     {{!-- Sheet Tab Navigation --}}
