--- a/html/actor-sheet.html
+++ b/html/actor-sheet.html
@@ -62,6 +62,10 @@
                     <label>Speed</label>
                     <input type="number" name="data.speed" value="{{data.speed}}"/>
                 </div>
+                <div class="attribute">
+                    <label>Mana</label>
+                    <input type="number" name="data.mana" value="{{data.mana}}"/>
+                </div>
             </div>
 
             <div class="attribute-group box vitals">
@@ -84,6 +88,7 @@
                 <div class="item" data-item-id="{{item._id}}">
                     <img src="{{item.img}}" class="item-icon"></img>
                     <label>{{item.name}}</label>
+                    <button class="show">Show</button>
                     <button class="use">Use</button>
                     <button class="edit">Edit</button>
                     <button class="delete">Delete</button>
@@ -121,7 +126,7 @@
                     <option value="Warforged">Warforged</option>
                     {{/select}}
                 </select>
-                <span class="race-info"> </label>
+                <span class="race-info">{{{raceInfo}}}</span>
             </div>
             <div class="background-field">
                 <label>Class</label>
@@ -142,7 +147,7 @@
                     <option value="Wizard">Wizard</option>
                     {{/select}}
                 </select>
-                <span class="class-info"> </label>
+                <span class="class-info">{{{classInfo}}}</span>
             </div>
             {{/if}}
             {{#if isNPC}}
